# AMeProxy

./: .gitignore  README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
configs/mihomo/: config.yaml
docs/: 代理工具实现原理.md  代理工具开发技术文档.md
scripts/: prebuild.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  Cargo.toml.backup2  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/configs/mihomo/: cache.db  config.yaml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src-tauri/configs/mihomo/: config.yaml
src-tauri/src/commands/: config.rs  mod.rs  proxy.rs
src-tauri/src/proxy/: config.rs  mod.rs  process.rs
src/components/common/: Header.vue  Sidebar.vue
src/components/dashboard/: Dashboard.vue
src/components/proxies/: Connections.vue  Logs.vue  ProxyGroups.vue  ProxyNodes.vue  Rules.vue
src/components/settings/: Settings.vue
src/services/: proxy.ts
src/stores/: proxyStore.ts  themeStore.ts
src/types/: index.ts
